# Copyright 2026 The Project Contributors
# SPDX-License-Identifier: MIT

load("@rules_java//java:defs.bzl", "java_library")
load("@rules_kotlin//kotlin:core.bzl", "kt_compiler_plugin", "kt_plugin_cfg")
load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
load("@rules_kotlin//kotlin:lint.bzl", "ktlint_test")
load("@rules_spring//springboot:springboot.bzl", "springboot")
load("//tools/kotlin:spring.bzl", "SPRING_OPEN_ANNOTATIONS", "spring_allopen_plugins")

package(default_visibility = ["//visibility:public"])

exports_files(["main/kotlin/dev/groknull/bpmner/core/BpmnDomain.kt"])

# Kotlin Compiler Plugins
kt_compiler_plugin(
    name = "allopen_base",
    id = "org.jetbrains.kotlin.allopen",
    deps = ["@rules_kotlin//kotlin/compiler:allopen-compiler-plugin"],
)

[kt_plugin_cfg(
    name = "allopen_" + a.split(".")[-1].lower(),
    options = {"annotation": [a]},
    plugin = ":allopen_base",
) for a in SPRING_OPEN_ANNOTATIONS]

java_library(
    name = "layout_bundle_resources",
    resource_strip_prefix = "layout/dist",
    resources = ["//layout:bundle"],
)

java_library(
    name = "web_bundle_resources",
    resource_strip_prefix = "web/dist",
    resources = ["//web:bundle"],
)

java_library(
    name = "web_static_resources",
    resource_strip_prefix = "web/src/static",
    resources = ["//web:static_assets"],
)

filegroup(
    name = "bazelrun_samples",
    srcs = [
        "//:toast-process.txt",
    ],
)

filegroup(
    name = "analysis_srcs",
    srcs = glob(["main/kotlin/**/*.kt"]),
)

kt_jvm_library(
    name = "bpmner_core",
    srcs = glob(["main/kotlin/**/*.kt"]),
    plugins = spring_allopen_plugins(),
    resources = glob(["main/resources/**"]),
    deps = [
        ":layout_bundle_resources",
        ":web_bundle_resources",
        ":web_static_resources",
        "//linter/pkl:pkl_runtime_resources",
        "//linter/pkl:rule_types_java",
        "@maven//:com_embabel_agent_embabel_agent_starter_anthropic",
        "@maven//:com_embabel_agent_embabel_agent_starter_gemini",
        "@maven//:com_embabel_agent_embabel_agent_starter_mistral_ai",
        "@maven//:com_embabel_agent_embabel_agent_starter_openai",
        "@maven//:com_embabel_agent_embabel_agent_starter_shell",
        "@maven//:com_embabel_agent_embabel_agent_starter_webmvc",
        "@maven//:org_apache_opennlp_opennlp_tools",
        "@maven//:org_camunda_bpm_model_camunda_bpmn_model",
        "@maven//:org_graalvm_polyglot_js",
        "@maven//:org_graalvm_polyglot_polyglot",
        "@maven//:org_jetbrains_kotlin_kotlin_reflect",
        "@maven//:org_jetbrains_kotlin_kotlin_stdlib",
        "@maven//:org_jmolecules_integrations_jmolecules_spring",
        "@maven//:org_jmolecules_integrations_jmolecules_starter_ddd",
        "@maven//:org_jmolecules_jmolecules_cqrs_architecture",
        "@maven//:org_jmolecules_jmolecules_events",
        "@maven//:org_jmolecules_jmolecules_hexagonal_architecture",
        "@maven//:org_jmolecules_jmolecules_onion_architecture",
        "@maven//:org_pkl_lang_pkl_config_java",
        "@maven//:org_pkl_lang_pkl_config_kotlin",
        "@maven//:org_springframework_boot_spring_boot_autoconfigure",
        "@maven//:org_springframework_boot_spring_boot_loader",
        "@maven//:org_springframework_boot_spring_boot_starter",
        "@maven//:org_springframework_boot_spring_boot_starter_web",
        "@maven//:org_springframework_modulith_spring_modulith_starter_core",
        "@rules_java//java/runfiles",
    ],
)

springboot(
    name = "bpmner_app",
    bazelrun_data = [":bazelrun_samples"],
    boot_app_class = "dev.groknull.bpmner.BpmnerApplicationKt",
    boot_launcher_class = "org.springframework.boot.loader.launch.JarLauncher",
    java_library = ":bpmner_core",
)

ktlint_test(
    name = "ktlint_check",
    srcs = glob(["main/kotlin/**/*.kt"]),
    config = "//:ktlint_config",
)
