# Copyright 2026 The Project Contributors
# SPDX-License-Identifier: MIT

load("@rules_graalvm//graalvm:defs.bzl", "native_image")
load("@rules_java//java:defs.bzl", "java_library")
load("@rules_java//java:java_binary.bzl", "java_binary")
load("@rules_java//java:java_import.bzl", "java_import")
load("@rules_kotlin//kotlin:core.bzl", "kt_compiler_plugin", "kt_plugin_cfg")
load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary", "kt_jvm_library")
load("@rules_kotlin//kotlin:lint.bzl", "ktlint_test")
load("@rules_spring//springboot:springboot.bzl", "springboot")
load("//tools/kotlin:spring.bzl", "SPRING_OPEN_ANNOTATIONS", "spring_allopen_plugins")

package(default_visibility = ["//visibility:public"])

exports_files(["main/kotlin/dev/groknull/bpmner/core/BpmnDomain.kt"])

# Kotlin Compiler Plugins
kt_compiler_plugin(
    name = "allopen_base",
    id = "org.jetbrains.kotlin.allopen",
    deps = ["@rules_kotlin//kotlin/compiler:allopen-compiler-plugin"],
)

[kt_plugin_cfg(
    name = "allopen_" + a.split(".")[-1].lower(),
    options = {"annotation": [a]},
    plugin = ":allopen_base",
) for a in SPRING_OPEN_ANNOTATIONS]

java_library(
    name = "layout_bundle_resources",
    resource_strip_prefix = "layout/dist",
    resources = ["//layout:bundle"],
)

java_library(
    name = "web_bundle_resources",
    resource_strip_prefix = "web/dist",
    resources = ["//web:bundle"],
)

java_library(
    name = "web_static_resources",
    resource_strip_prefix = "web/src",
    resources = ["//web:static_assets"],
)

java_library(
    name = "preview_bundle_resources",
    resource_strip_prefix = "web/dist",
    resources = ["//web:preview_bundle"],
)

filegroup(
    name = "bazelrun_samples",
    srcs = [
        "//:toast-process.txt",
    ],
)

filegroup(
    name = "analysis_srcs",
    srcs = glob(["main/kotlin/**/*.kt"]),
)

kt_jvm_library(
    name = "bpmner_core",
    srcs = glob(["main/kotlin/**/*.kt"]),
    plugins = spring_allopen_plugins(),
    resources = glob(["main/resources/**"]),
    deps = [
        ":layout_bundle_resources",
        ":preview_bundle_resources",
        ":web_bundle_resources",
        ":web_static_resources",
        "//linter/pkl:pkl_runtime_resources",
        "@maven//:com_embabel_agent_embabel_agent_starter_anthropic",
        "@maven//:com_embabel_agent_embabel_agent_starter_gemini",
        "@maven//:com_embabel_agent_embabel_agent_starter_mistral_ai",
        "@maven//:com_embabel_agent_embabel_agent_starter_openai",
        "@maven//:com_embabel_agent_embabel_agent_starter_shell",
        "@maven//:com_embabel_agent_embabel_agent_starter_webmvc",
        "@maven//:org_apache_opennlp_opennlp_tools",
        "@maven//:org_camunda_bpm_model_camunda_bpmn_model",
        "@maven//:org_eclipse_elk_org_eclipse_elk_alg_layered",
        "@maven//:org_eclipse_xtext_org_eclipse_xtext_xbase_lib",
        "@maven//:org_graalvm_polyglot_js",
        "@maven//:org_graalvm_polyglot_polyglot",
        "@maven//:org_jetbrains_kotlin_kotlin_reflect",
        "@maven//:org_jetbrains_kotlin_kotlin_stdlib",
        "@maven//:org_jmolecules_integrations_jmolecules_spring",
        "@maven//:org_jmolecules_integrations_jmolecules_starter_ddd",
        "@maven//:org_jmolecules_jmolecules_cqrs_architecture",
        "@maven//:org_jmolecules_jmolecules_events",
        "@maven//:org_jmolecules_jmolecules_onion_architecture",
        "@maven//:org_pkl_lang_pkl_config_java",
        "@maven//:org_pkl_lang_pkl_config_kotlin",
        "@maven//:org_springframework_boot_spring_boot_autoconfigure",
        "@maven//:org_springframework_boot_spring_boot_loader",
        "@maven//:org_springframework_boot_spring_boot_starter",
        "@maven//:org_springframework_boot_spring_boot_starter_web",
        "@maven//:org_springframework_modulith_spring_modulith_starter_core",
        "@rules_java//java/runfiles",
    ],
)

springboot(
    name = "bpmner_app",
    bazelrun_data = [":bazelrun_samples"],
    boot_app_class = "dev.groknull.bpmner.BpmnerApplicationKt",
    boot_launcher_class = "org.springframework.boot.loader.launch.JarLauncher",
    java_library = ":bpmner_core",
)

# Dev-only plain JVM binary so IntelliJ's Bazel plugin renders a run/debug gutter
# action on `fun main`. Reuses the :bpmner_core library; it does NOT replicate the
# Spring Boot launcher/profile wiring of :bpmner_app — use :bpmner_app for the
# packaged artifact, this purely for fast in-IDE run/debug.
kt_jvm_binary(
    name = "bpmner_dev",
    main_class = "dev.groknull.bpmner.BpmnerApplicationKt",
    runtime_deps = [":bpmner_core"],
)

ktlint_test(
    name = "ktlint_check",
    srcs = glob(["main/kotlin/**/*.kt"]),
    config = "//:ktlint_config",
)

java_binary(
    name = "aot_processor",
    main_class = "org.springframework.boot.SpringApplicationAotProcessor",
    runtime_deps = [":bpmner_core"],
)

genrule(
    name = "bpmner_aot_sources",
    outs = [
        "aot_sources.srcjar",
        "aot_resources.jar",
        "aot_classes.jar",
    ],
    cmd = """
    set -euo pipefail

    mkdir -p aot_tmp/sources
    mkdir -p aot_tmp/resources
    mkdir -p aot_tmp/classes

    # Run the AOT processor
    $(location :aot_processor) \
      dev.groknull.bpmner.BpmnerApplicationKt \
      aot_tmp/sources \
      aot_tmp/resources \
      aot_tmp/classes \
      dev.groknull.bpmner \
      bpmner \
      --spring.profiles.active=githubmodels \
      --spring.threads.virtual.enabled=false

    # Package sources into a srcjar
    source_args=()
    while IFS= read -r file; do
      rel="$${file#./}"
      source_args+=("$${rel}=aot_tmp/sources/$${rel}")
    done < <(cd aot_tmp/sources && find . -type f | sort)
    $(location @bazel_tools//tools/zip:zipper) c $(location aot_sources.srcjar) "$${source_args[@]}"

    # Package resources into a jar
    resource_args=()
    while IFS= read -r file; do
      rel="$${file#./}"
      resource_args+=("$${rel}=aot_tmp/resources/$${rel}")
    done < <(cd aot_tmp/resources && find . -type f | sort)
    $(location @bazel_tools//tools/zip:zipper) c $(location aot_resources.jar) "$${resource_args[@]}"

    # Package generated classes into a jar
    class_args=()
    while IFS= read -r file; do
      rel="$${file#./}"
      class_args+=("$${rel}=aot_tmp/classes/$${rel}")
    done < <(cd aot_tmp/classes && find . -type f | sort)
    $(location @bazel_tools//tools/zip:zipper) c $(location aot_classes.jar) "$${class_args[@]}"
    """,
    tools = [
        ":aot_processor",
        "@bazel_tools//tools/zip:zipper",
    ],
)

java_import(
    name = "bpmner_aot_classes",
    jars = [":aot_classes.jar"],
)

java_library(
    name = "bpmner_aot_lib",
    srcs = [":aot_sources.srcjar"],
    deps = [
        ":bpmner_aot_classes",
        ":bpmner_core",
        "@maven//:com_embabel_agent_embabel_agent_ai",
        "@maven//:com_embabel_agent_embabel_agent_anthropic_autoconfigure",
        "@maven//:com_embabel_agent_embabel_agent_api",
        "@maven//:com_embabel_agent_embabel_agent_gemini_autoconfigure",
        "@maven//:com_embabel_agent_embabel_agent_mistral_ai_autoconfigure",
        "@maven//:com_embabel_agent_embabel_agent_openai_autoconfigure",
        "@maven//:com_embabel_agent_embabel_agent_platform_autoconfigure",
        "@maven//:com_embabel_agent_embabel_agent_shell",
        "@maven//:com_embabel_agent_embabel_agent_shell_autoconfigure",
        "@maven//:com_embabel_agent_embabel_agent_webmvc",
        "@maven//:com_embabel_common_embabel_common_core",
        "@maven//:com_embabel_common_embabel_common_textio",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_fasterxml_jackson_module_jackson_module_parameter_names",
        "@maven//:io_micrometer_micrometer_observation",
        "@maven//:io_modelcontextprotocol_sdk_mcp_core",
        "@maven//:jakarta_validation_jakarta_validation_api",
        "@maven//:org_jetbrains_kotlin_kotlin_stdlib",
        "@maven//:org_jline_jline_reader",
        "@maven//:org_jline_jline_terminal",
        "@maven//:org_jmolecules_integrations_jmolecules_spring",
        "@maven//:org_springframework_ai_spring_ai_autoconfigure_mcp_client_common",
        "@maven//:org_springframework_ai_spring_ai_autoconfigure_mcp_client_httpclient",
        "@maven//:org_springframework_ai_spring_ai_autoconfigure_model_chat_client",
        "@maven//:org_springframework_ai_spring_ai_autoconfigure_model_chat_observation",
        "@maven//:org_springframework_ai_spring_ai_client_chat",
        "@maven//:org_springframework_ai_spring_ai_mcp",
        "@maven//:org_springframework_ai_spring_ai_mcp_annotations",
        "@maven//:org_springframework_ai_spring_ai_model",
        "@maven//:org_springframework_boot_spring_boot",
        "@maven//:org_springframework_boot_spring_boot_autoconfigure",
        "@maven//:org_springframework_modulith_spring_modulith_core",
        "@maven//:org_springframework_modulith_spring_modulith_moments",
        "@maven//:org_springframework_shell_spring_shell_autoconfigure",
        "@maven//:org_springframework_shell_spring_shell_core",
        "@maven//:org_springframework_shell_spring_shell_standard",
        "@maven//:org_springframework_shell_spring_shell_standard_commands",
        "@maven//:org_springframework_spring_aop",
        "@maven//:org_springframework_spring_beans",
        "@maven//:org_springframework_spring_context",
        "@maven//:org_springframework_spring_core",
        "@maven//:org_springframework_spring_web",
        "@maven//:org_springframework_spring_webflux",
    ],
)

java_import(
    name = "bpmner_aot_resources",
    jars = [":aot_resources.jar"],
)

genrule(
    name = "pkl_config_java_all_stripped_jar",
    srcs = ["@pkl_config_java_all_jar//file"],
    outs = ["pkl_config_java_all_stripped.jar"],
    cmd = """
    mkdir -p empty/META-INF
    touch empty/META-INF/MANIFEST.MF
    $(location @bazel_tools//tools/zip:zipper) c $@ META-INF/MANIFEST.MF=empty/META-INF/MANIFEST.MF
    """,
    tools = ["@bazel_tools//tools/zip:zipper"],
)

java_import(
    name = "pkl_config_java_all_stripped",
    jars = [":pkl_config_java_all_stripped_jar"],
)

genrule(
    name = "native_launcher_sources",
    outs = ["native_launcher.srcjar"],
    cmd = """
    mkdir -p native_launcher_src/dev/groknull/bpmner
    cat > native_launcher_src/dev/groknull/bpmner/NativeBpmnerApplication.java <<'EOF'
package dev.groknull.bpmner;

import java.util.ArrayList;
import java.util.List;

/** Native-image launcher that keeps Spring property options out of Spring Shell command args. */
public final class NativeBpmnerApplication {
  private NativeBpmnerApplication() {}

  public static void main(String[] args) {
    List<String> applicationArgs = new ArrayList<>();
    for (String arg : args) {
      if (arg.startsWith("--") && arg.contains("=")) {
        String property = arg.substring(2);
        int separator = property.indexOf('=');
        String key = property.substring(0, separator);
        if (key.contains(".")) {
          System.setProperty(key, property.substring(separator + 1));
        } else {
          applicationArgs.add(arg);
        }
      } else {
        applicationArgs.add(arg);
      }
    }
    BpmnerApplicationKt.main(applicationArgs.toArray(String[]::new));
  }
}
EOF
    $(location @bazel_tools//tools/zip:zipper) c $(location native_launcher.srcjar) \
      dev/groknull/bpmner/NativeBpmnerApplication.java=native_launcher_src/dev/groknull/bpmner/NativeBpmnerApplication.java
    """,
    tools = ["@bazel_tools//tools/zip:zipper"],
)

java_library(
    name = "native_launcher",
    srcs = [":native_launcher.srcjar"],
    deps = [":bpmner_core"],
)

java_library(
    name = "bpmner_native_config_resources",
    resource_strip_prefix = "src/native-config",
    resources = [
        "native-config/META-INF/native-image/dev.groknull.bpmner/proxy-config.json",
        "native-config/META-INF/native-image/dev.groknull.bpmner/resource-config.json",
        "native-config/META-INF/native-image/dev.groknull.bpmner/serialization-config.json",
    ],
)

native_image(
    name = "bpmner_native",
    extra_args = [
        "--no-fallback",
        "-H:+UnlockExperimentalVMOptions",
        "-H:+AllowDeprecatedBuilderClassesOnImageClasspath",
        "-H:Class=dev.groknull.bpmner.NativeBpmnerApplication",
        "--initialize-at-build-time=org.springframework.boot.loader.nio.file.NestedFileSystemProvider",
        "--enable-preview",
    ],
    include_resources = ".*\\.kotlin_builtins|.*\\.kotlin_metadata|logback.*\\.xml|models/.*\\.yml|embabel-.*\\.properties",
    main_class = "dev.groknull.bpmner.NativeBpmnerApplication",
    reflection_configuration = "native-config/META-INF/native-image/dev.groknull.bpmner/reflect-config.json",
    tags = ["local"],
    deps = [
        ":bpmner_aot_lib",
        ":bpmner_aot_resources",
        ":bpmner_core",
        ":bpmner_native_config_resources",
        ":native_launcher",
    ],
)
