# Copyright (c) 2026 The Project Contributors
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in
# all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

load("@aspect_rules_esbuild//esbuild:defs.bzl", "esbuild")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("//tools/js:ts.bzl", "bpmner_ts_project")

package(default_visibility = ["//visibility:public"])

# Link the standalone web package's node_modules
npm_link_all_packages(name = "node_modules")

exports_files([
    "tsconfig.bazel.json",
    "tsconfig.json",
])

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
)

ts_config(
    name = "tsconfig_bazel",
    src = "tsconfig.bazel.json",
    deps = [":tsconfig"],
)

WEB_TS_DEPS = [
    "//:node_modules/@types/node",
    "//:node_modules/bpmn-js",
]

bpmner_ts_project(
    name = "ts",
    srcs = glob(["src/**/*.ts"]),
    out_dir = "tsc",
    resolve_json_module = True,
    deps = WEB_TS_DEPS,
)

esbuild(
    name = "bundle",
    srcs = glob(["src/**/*.ts"]),
    config = {
        "sourcemap": False,
    },
    entry_point = "src/app.ts",
    format = "iife",
    output = "dist/js/app-bundle.js",
    platform = "browser",
    target = "es2022",
    deps = WEB_TS_DEPS,
)

filegroup(
    name = "static_assets",
    srcs = glob(["src/static/**/*"]),
)
