# Copyright 2026 The Project Contributors
# SPDX-License-Identifier: MIT

load("@aspect_rules_esbuild//esbuild:defs.bzl", "esbuild")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("//tools/js:ts.bzl", "bpmner_ts_configs", "bpmner_ts_project")

package(default_visibility = ["//src:__subpackages__", "//:__pkg__"])

# Link the standalone web package's node_modules
npm_link_all_packages(name = "node_modules")

WEB_SRCS = glob(["src/**/*.ts"])
WEB_STATIC_ASSETS = glob(["src/static/**/*"])

WEB_TS_DEPS = [
    "//:node_modules/@types/node",
    "//:node_modules/bpmn-js",
]

bpmner_ts_configs()

bpmner_ts_project(
    name = "ts",
    srcs = WEB_SRCS,
    out_dir = "tsc",
    tsconfig = ":tsconfig_bazel",
    resolve_json_module = True,
    deps = WEB_TS_DEPS,
)

esbuild(
    name = "bundle",
    srcs = WEB_SRCS,
    config = {
        "sourcemap": False,
    },
    entry_point = "src/app.ts",
    format = "iife",
    output = "dist/js/app-bundle.js",
    platform = "browser",
    target = "es2022",
    deps = WEB_TS_DEPS,
)

filegroup(
    name = "static_assets",
    srcs = WEB_STATIC_ASSETS,
)
