# Copyright 2026 The Project Contributors
# SPDX-License-Identifier: MIT

load("@aspect_rules_esbuild//esbuild:defs.bzl", "esbuild")
load("@bazel_sonarqube//:defs.bzl", "sonarqube")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("//tools/js:test.bzl", "bpmner_node_test")
load("//tools/js:ts.bzl", "bpmner_ts_configs", "bpmner_ts_project")

package(default_visibility = [
    "//:__pkg__",
    "//src:__subpackages__",
])

# Single sonarqube rule (no sq_project wrapper) — each package IS its own SonarCloud
# project, so the multi-module aggregation that sq_project enables is unused here.
# Having both rules in one package fails to load because each generates the same
# `sonar-project.properties` output file.
#
# Visibility is explicitly public on this rule (overriding the restricted package
# default) so the SonarCloud workflow can `bazel run //web:sonar` from outside
# the package. The package-level default stays restricted to avoid leaking the
# bundler / asset targets to the rest of the build graph.
sonarqube(
    name = "sonar",
    srcs = glob(["src/**/*.ts"]),
    project_key = "kludgeworks_bpmner_web",
    project_name = "bpmner Web",
    scm_info = ["//:git_info"],
    visibility = ["//visibility:public"],
)

# Link the standalone web package's node_modules
npm_link_all_packages(name = "node_modules")

WEB_SRCS = glob([
    "src/**/*.ts",
    "types/**/*.d.ts",
])

WEB_TEST_SRCS = glob(["test/**/*.ts"])

WEB_STATIC_ASSETS = glob(["src/static/**/*"])

WEB_TS_DEPS = [
    "//:node_modules/@types/jsdom",
    "//:node_modules/@types/node",
    "//:node_modules/axe-core",
    "//:node_modules/bpmn-js",
    "//:node_modules/jsdom",
]

bpmner_ts_configs()

bpmner_ts_project(
    name = "ts",
    srcs = WEB_SRCS + WEB_TEST_SRCS,
    out_dir = "tsc",
    resolve_json_module = True,
    tsconfig = ":tsconfig_bazel",
    deps = WEB_TS_DEPS,
)

bpmner_node_test(
    name = "preview_helpers_test",
    srcs = WEB_SRCS + WEB_TEST_SRCS,
    entry_point = "test/preview-helpers.test.ts",
    deps = WEB_TS_DEPS,
)

bpmner_node_test(
    name = "stage_rail_test",
    srcs = WEB_SRCS + WEB_TEST_SRCS,
    entry_point = "test/stage-rail.test.ts",
    deps = WEB_TS_DEPS,
)

bpmner_node_test(
    name = "snapshot_import_test",
    srcs = WEB_SRCS + WEB_TEST_SRCS,
    entry_point = "test/snapshot-import.test.ts",
    deps = WEB_TS_DEPS,
)

bpmner_node_test(
    name = "result_bar_test",
    srcs = WEB_SRCS + WEB_TEST_SRCS,
    entry_point = "test/result-bar.test.ts",
    deps = WEB_TS_DEPS,
)

bpmner_node_test(
    name = "stream_settle_test",
    srcs = WEB_SRCS + WEB_TEST_SRCS,
    entry_point = "test/stream-settle.test.ts",
    deps = WEB_TS_DEPS,
)

bpmner_node_test(
    name = "clarify_form_test",
    srcs = WEB_SRCS + WEB_TEST_SRCS,
    entry_point = "test/clarify-form.test.ts",
    deps = WEB_TS_DEPS,
)

bpmner_node_test(
    name = "diagnostic_diff_test",
    srcs = WEB_SRCS + WEB_TEST_SRCS,
    entry_point = "test/diagnostic-diff.test.ts",
    deps = WEB_TS_DEPS,
)

# jsdom is a large CJS package with runtime resource loading that does not
# survive esbuild bundling, so it is marked external here and resolved from
# node_modules at runtime (ADR-ss-006 / PLAN ss-5 risk R-jsdom-bundle).
bpmner_node_test(
    name = "studio_a11y_test",
    srcs = WEB_SRCS + WEB_TEST_SRCS,
    entry_point = "test/studio-a11y.test.ts",
    external = ["jsdom"],
    deps = WEB_TS_DEPS,
)

esbuild(
    name = "bundle",
    srcs = WEB_SRCS,
    config = {
        "sourcemap": False,
    },
    entry_point = "src/app.ts",
    format = "iife",
    output = "dist/static/js/app-bundle.js",
    platform = "browser",
    target = "es2022",
    deps = WEB_TS_DEPS,
)

esbuild(
    name = "preview_bundle",
    srcs = WEB_SRCS,
    config = {
        "sourcemap": False,
    },
    entry_point = "src/preview.ts",
    format = "esm",
    output = "dist/preview/preview-bundle.js",
    platform = "browser",
    target = "es2022",
    deps = WEB_TS_DEPS,
)

filegroup(
    name = "static_assets",
    srcs = WEB_STATIC_ASSETS,
)
